--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OSCILLESTRACKER</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+    <div class="app-container">
+        <header class="rack-header">
+            <h1>OSCILLESTRACKER <span class="version">v0.1</span></h1>
+            <div class="transport">
+                <button id="playBtn">PLAY</button>
+                <button id="stopBtn">STOP</button>
+                <div class="bpm-display">130.00 BPM</div>
+            </div>
+        </header>
+
+        <div class="rack-body">
+            
+            <div class="track-module">
+                <div class="track-header">
+                    <span class="track-name">BASS SYNTH</span>
+                    <div class="track-knobs">
+                        <div class="knob"></div> <div class="knob"></div>
+                    </div>
+                </div>
+
+                <div class="track-interface">
+                    <div class="column col-left">
+                        <div class="label-overlay">MIDI IN</div>
+                        <canvas id="midiCanvas1" width="60" height="400"></canvas>
+                    </div>
+
+                    <div class="column col-mid">
+                        <div class="tracker-header">NOTE | INST | VOL | FX</div>
+                        <div class="tracker-rows" id="trackerRows1">
+                            </div>
+                        <div class="playhead"></div>
+                    </div>
+
+                    <div class="column col-right">
+                        <div class="label-overlay">AUDIO OUT</div>
+                        <canvas id="waveCanvas1" width="60" height="400"></canvas>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
