Añadido botón de añadir pistas

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="transport">
                 <button id="playBtn">PLAY</button>
                 <button id="stopBtn">STOP</button>
+                <button id="addTrackBtn" style="background: #22ff88; color: #000; font-weight: bold;">+ ADD TRACK</button>
                 <div class="bpm-display">130.00 BPM</div>
             </div>
         </header>
