Añadido botón de eliminar pistas

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <span class="track-name" contenteditable="true">BASS SYNTH</span>
                 <div class="track-controls">
                     <input type="color" class="track-color-picker" value="#ff9900" title="Color de Pista">
+                    <button class="delete-track-btn">×</button>
                 </div>
             </div>
             <div class="track-interface">
