Editado para que no tengan límites MIDI y wave

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="track-interface">
                 <div class="column col-left">
                     <div class="label-overlay">MIDI IN</div>
-                    <canvas class="midi-canvas" width="60" height="400"></canvas>
+                    <canvas class="midi-canvas"></canvas>
                 </div>
                 <div class="column col-mid">
                     <div class="tracker-header">NOTE | INST | VOL | FX</div>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="column col-right">
                     <div class="label-overlay">AUDIO OUT</div>
-                    <div class="wave-chart-container" style="width: 60px; height: 400px;"></div>
+                    <div class="wave-chart-container"></div>
                 </div>
             </div>
             <div class="track-footer">
