Correcciones en la leyenda

--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
                     <canvas class="midi-canvas"></canvas>
                 </div>
                 <div class="column col-mid">
-                    <div class="tracker-header">NOTE | INST | VOL | FX</div>
+                    <div class="tracker-header">
+                         <div class="header-cell row-num-col"></div> 
+                         <div class="header-cell">NOTE</div>
+                         <div class="header-cell">INS</div>
+                         <div class="header-cell">VOL</div>
+                         <div class="header-cell">FX</div>
+                  </div>
                     <div class="tracker-grid-container">
                         <div class="playhead"></div>
                         
