Mejorada la lógica de la leyenda

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                 <div class="column col-mid">
                     <div class="tracker-header">
                          <div class="header-cell row-num-col"></div> 
-                         <div class="header-cell">NOTE</div>
-                         <div class="header-cell">INS</div>
-                         <div class="header-cell">VOL</div>
-                         <div class="header-cell">FX</div>
+                               <span class="header-cell">NOTE</span>
+                               <span class="header-cell">INST</span>
+                               <span class="header-cell">VOL</span>
+                               <span class="header-cell">FX</span>
                   </div>
                     <div class="tracker-grid-container">
                         <div class="playhead"></div>
