Vu Master añadido

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <div class="app-container">
         <header class="rack-header">
             <h1>OSCILLESTRACKER <span class="version">v0.3.2</span></h1>
+
+                               <div class="master-vu-container">
+                                          <div class="vu-meter">
+                   <div id="masterVuFill" class="vu-fill"></div>
+                                          </div>
+                            <span class="vu-label">MASTER</span>
+            </div>
+            
             <div class="transport">
                 <button id="playBtn">PLAY</button>
                 <button id="stopBtn">STOP</button>
