--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="app-container">
         <header class="rack-header">
-            <h1>OSCILLESTRACKER <span class="version">v0.3.2</span></h1>
+            <h1>OSCILLESTRACKER <span class="version">v0.8.5 "Beta"</span></h1>
 
             <div class="master-vu-container">
                 <div class="vu-meter">
